Practice Test: completed review of the test N. 2